@@ -4,6 +4,10 @@
         {
             "filename": "main.cpp",
             "has_fixits": true
+        },
+        {
+            "filename": "bug_expression_in_generic.cpp"
         }
+
     ]
 }
